# arrow-typing

./: Cargo.toml  README.md
src/: bitmap.rs  builder.rs  lib.rs  types.rs  validity.rs
src/builder/: backend.rs  config.rs  mod.rs
src/builder/backend/: bool.rs  list.rs  mod.rs  null.rs  primitive.rs
src/element/: list.rs  mod.rs  option.rs  primitive.rs
src/elements/: list.rs  mod.rs
src/types/: list.rs  mod.rs  primitive.rs
