[package]
name = "arrow-typing"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow-array = "51.0.0"
arrow-buffer = "51.0.0"
arrow-schema = "51.0.0"
half = "2.4.1"
proptest = { version = "1.4.0", default-features = false, optional = true }

[dev-dependencies]
proptest = "1.4.0"

[features]
proptest = ["dep:proptest"]
